src/test/resources/semantic/sentences/correct/TC_START.ru
struct A{
    B b;
    Int start;
}

impl A{
    .(){
        (nil);
        ("false");
        b.num=1;
        start=10;
    }
}
struct B{
    Int num;
}

impl B{
    .(){}
    fn m1(Str start)->void{
        start="hola";
    }
}
start{
    Bool start;
    start=true;
}

